	- upgraded hostap-driver to version 0.4.7
	- upgraded hostapd to version 0.4.8
	- increased the MAX_INTERFACES in rp-pppoe's relay.h
	  (for extreme users :))
	- upgraded zlib to version 1.2.3
	- upgraded openssh to version 4.3p2
	- upgraded quagga to the latest stable (0.98.5-20060503)
	- upgraded postgresql client to v7.3.14
	- upgraded libgmp to v4.2.1

Changes from 0.2p7 to 0.2p8:
	- added a patch to work around texas instruments' IRQ bug
	- upraded grsec to 2.1.8, and re-ported the random
	  IP ID, TCP ISN, RPC XID patches from grsec 2.1.1
	- upgraded pcmcia-cs to 3.2.8
	- upgraded uClibc to 0.9.28

Changes from 0.2p6 to 0.2p7:
	- upgraded pppd's radius to send
	  'Acct-{Input,Output}-Gigawords' attributes
	- upgraded iproute2 to iproute2-051007

Changes from 0.2p5 to 0.2p6:
	- upgraded iptables from 1.2.9 to 1.3.4
	- added ipt_random module to kernel

Changes from 0.2p4 to 0.2p5:
	- pppoe-relay now sets O_NONBLOCK on fds to
	  avoid the possibility of blocking
	- patched wget to parse the PASV ftp command's
	  result correctly

Changes from 0.2p3 to 0.2p4:
	- backported a patch to vi.c from svn

Changes from 0.2p2 to 0.2p3:
	- upgraded ltraf
	- upgraded busybox to version 1.01
	- upgraded the kernel to version 2.4.32

Changes from 0.2p1 to 0.2p2:
	- modified the 'reflash' script

Changes from 0.2 to 0.2p1:
	- upgraded madwifi and added the tools

Changes from 0.2-pre1 to 0.2:
	- upgraded openssl to 0.9.7i
	- applied some cvs fixes for pppd
	- upgraded libpcap (to 0.9.4) and tcpdump (to 3.9.4)

Changes from 0.1.5 to 0.2-pre1:
	- added the ethtool package
	- upgraded the madwifi package
	- upgraded the ltraf package
	- added ifenslave
	- upgraded the kernel to 2.4.31 and grsec to 2.1.6
	- upgraded ppp to cvs version
	- added db.1.86
	- added perl-5.8.7 as package
	- upgraded uClibc to 0.9.27
	- upgraded wireless-tools to version 27
	- some modifications made to cfpkg.mk
	- added primitive package handling
	- upgraded quagga to 0.98.5