@@ -1,1 +1,0 @@
-600a008d1ef1c0b903e55933c339018b  quagga-0.98.5-20060503.tar.gz
