@@ -17,6 +17,7 @@ Changes from 0.2p8 to 1.0:
 	- upgraded quagga to the latest stable (0.98.5-20060503)
 	- upgraded postgresql client to v7.3.14
 	- upgraded libgmp to v4.2.1
+	- upgraded quagga to the latest stable (0.98.6)
 
 Changes from 0.2p7 to 0.2p8:
 	- added a patch to work around texas instruments' IRQ bug
